--- a/index.html
+++ b/index.html
@@ -398,8 +398,8 @@
             </div>
             <div class="feature">
                 <i class="fas fa-comments"></i>
-                <h3>Student Queries</h3>
-                <p>Centralized platform for resolving student queries efficiently.</p>
+                <h3>Library Management</h3>
+                <p>Efficiently track book issues, returns, availability, and fines.</p>
             </div>
         </div>
     </section>
