--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
                 <p>AI Chatbot to assist students and faculty with instant answers and academic queries.</p>
             </div>
             <div class="feature">
-                <i class="fas fa-comments"></i>
+                <i class="fas fa-book"></i>
                 <h3>Library Management</h3>
                 <p>Efficiently track book issues, returns, availability, and fines.</p>
             </div>
