--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer Science Department - College Management System</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/scrollreveal/4.0.9/scrollreveal.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
 
     <style>
         /* Root Variables for Colors */
@@ -355,8 +358,11 @@
 
     <section class="hero">
         <div class="hero-content" id="hero-content">
+
             <h2 class="Heading">Welcome to the <br><span>Computer Science Department</span></h2>
-            <p>A Smart Ecosystem for Learning and Management.</p>
+            <p><span id="typed-text"></span></p>
+            <!-- <p >A Smart Ecosystem for Learning and Management.</p> -->
+
             <div class="button-wrapper">
                 <a href="https://apex.oracle.com/pls/apex/f?p=163997:9999" class="cta-btn">Get Started</a>
             </div>
@@ -425,6 +431,15 @@
         ScrollReveal().reveal('.hero-content, .Heading', { origin: 'left' });
         ScrollReveal().reveal('#about, .Heading', { origin: 'top' });
         ScrollReveal().reveal('#about p, .feature', { origin: 'bottom', delay: 200 });
+
+        // Typing Animation
+var typed = new Typed("#typed-text", {
+    strings: ["Smart College Management for the Future !", "AI-Powered Education System !"],
+    typeSpeed: 50,
+    backSpeed: 25,
+    loop: true
+     
+});
     </script>
 
 
